--- a/resources/views/Page/tours.html.twig
+++ b/resources/views/Page/tours.html.twig
@@ -23,9 +23,9 @@
     <div class="middle_row row_light_gray">
         <div class="container clearfix">
             <!-- special offer -->
-            <div class="">
+            <div class="" style="width: 470px">
                 {% for slug, tour in tours if tour.duration2 is defined %}
-                    {% if loop.index < tours|length / 2 %}
+                    {% if loop.index <= tours|length / 2 %}
                     <div class="special_item">
                         <div class="special_image">
                             <a href="{{ path('tour_show', {'slug' : slug}) }}"><img src="/images/special_offer_naadam.jpg" alt="{{ tour.name }}"></a>
@@ -44,9 +44,9 @@
             </div>
             <!--/ special offer -->
             <!-- special offer -->
-            <div class="">
+            <div class="" style="width: 470px">
                 {% for slug, tour in tours if tour.duration2 is defined %}
-                    {% if loop.index >= tours|length / 2 %}
+                    {% if loop.index > tours|length / 2 %}
                     <div class="special_item">
                         <div class="special_image">
                             <a href="{{ path('tour_show', {'slug' : slug}) }}"><img src="/images/special_offer_naadam.jpg" alt="{{ tour.name }}"></a>
