--- a/resources/views/Page/tours.html.twig
+++ b/resources/views/Page/tours.html.twig
@@ -23,7 +23,7 @@
     <div class="middle_row row_light_gray">
         <div class="container clearfix">
             <!-- special offer -->
-            <div class="" style="width: 470px">
+            <div class="" style="width: 470px;float:left;">
                 {% for slug, tour in tours if tour.duration2 is defined %}
                     {% if loop.index <= tours|length / 2 %}
                     <div class="special_item">
@@ -44,7 +44,7 @@
             </div>
             <!--/ special offer -->
             <!-- special offer -->
-            <div class="" style="width: 470px">
+            <div class="" style="width: 470px;float:left;">
                 {% for slug, tour in tours if tour.duration2 is defined %}
                     {% if loop.index > tours|length / 2 %}
                     <div class="special_item">
