--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -29,7 +29,7 @@
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'mongolian-arts-and-culture'}) }}"><span>Mongolian Arts and Culture</span></a></li>
                     </ul>
                 </li>
-                <li class="menu-level-0 mega-nav"><a href="#"><span>TOURS</span></a>
+                <li class="menu-level-0 mega-nav"><a href="{{ path('tour_all') }}"><span>TOURS</span></a>
                     <ul class="submenu-1">
                         <li class="menu-level-1 mega-nav-widget">
                             <!-- widget latest entries from category -->
