--- a/resources/views/Page/tours.html.twig
+++ b/resources/views/Page/tours.html.twig
@@ -24,19 +24,19 @@
         <div class="container clearfix">
             <!-- special offer -->
             <div class="" style="width: 470px;float:left;">
-                {% for slug, tour in tours if tour.duration2 is defined %}
+                {% for tour in tours if tour.duration2 is defined %}
                     {% if loop.index <= tours|length / 2 %}
                     <div class="special_item">
                         <div class="special_image">
-                            <a href="{{ path('tour_show', {'slug' : slug}) }}"><img src="{{ tour.list_img is defined and tour.list_img is not null ? tour.list_img : 'http://placehold.it/310x134' }}" alt="{{ tour.name }}"></a>
+                            <a href="{{ path('tour_show', {'slug' : tour.slug}) }}"><img src="{{ tour.list_img is defined and tour.list_img is not null ? tour.list_img : 'http://placehold.it/310x134' }}" alt="{{ tour.name }}"></a>
                         </div>
                         <div class="special_text">
-                            <h3><a href="{{ path('tour_show', {'slug' : slug}) }}">{{ tour.name }}</a></h3>
+                            <h3><a href="{{ path('tour_show', {'slug' : tour.slug}) }}">{{ tour.name }}</a></h3>
                             <div class="info_row"><span>DURATION:</span> {{ tour.duration2 }}</div>
                             {% if tour.price_int is defined and tour.price_int is not null %}
                             <div class="info_row"><span>PRICE FROM:</span> ${{ tour.price_int }}</div>
                             {% endif %}
-                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : slug}) }}">VIEW DETAILS</a></div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : tour.slug}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
                     {% endif %}
@@ -45,19 +45,19 @@
             <!--/ special offer -->
             <!-- special offer -->
             <div class="" style="width: 470px;float:left;">
-                {% for slug, tour in tours if tour.duration2 is defined %}
+                {% for tour in tours if tour.duration2 is defined %}
                     {% if loop.index > tours|length / 2 %}
                     <div class="special_item">
                         <div class="special_image">
-                            <a href="{{ path('tour_show', {'slug' : slug}) }}"><img src="{{ tour.list_img is defined and tour.list_img is not null ? tour.list_img : 'http://placehold.it/310x134' }}" alt="{{ tour.name }}"></a>
+                            <a href="{{ path('tour_show', {'slug' : tour.slug}) }}"><img src="{{ tour.list_img is defined and tour.list_img is not null ? tour.list_img : 'http://placehold.it/310x134' }}" alt="{{ tour.name }}"></a>
                         </div>
                         <div class="special_text">
-                            <h3><a href="{{ path('tour_show', {'slug' : slug}) }}">{{ tour.name }}</a></h3>
+                            <h3><a href="{{ path('tour_show', {'slug' : tour.slug}) }}">{{ tour.name }}</a></h3>
                             <div class="info_row"><span>DURATION:</span> {{ tour.duration2 }}</div>
                             {% if tour.price_int is defined and tour.price_int is not null %}
                             <div class="info_row"><span>PRICE FROM:</span> ${{ tour.price_int }}</div>
                             {% endif %}
-                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : slug}) }}">VIEW DETAILS</a></div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : tour.slug}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
                     {% endif %}
