Contact us for Early Booking Discount

--- a/resources/views/Tour/gobi_desert_tour.html.twig
+++ b/resources/views/Tour/gobi_desert_tour.html.twig
@@ -193,6 +193,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span style="color: #949494; text-decoration: line-through">$1995 </span><span>$1590 for 2-5 PAX</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$450</span>
