--- a/resources/views/Tour/motor-bike-tour.html.twig
+++ b/resources/views/Tour/motor-bike-tour.html.twig
@@ -203,6 +203,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>Privately on Request</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
