--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -198,6 +198,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$2995</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         <span style="font-weight: bold; color: brown">$300 OFF by Oct 31</span>
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$500</span>
