--- a/resources/views/Tour/unparalleled-luxury-tour.html.twig
+++ b/resources/views/Tour/unparalleled-luxury-tour.html.twig
@@ -209,6 +209,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>5995 $ for per person</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>1250 $</span>
                         <br/>
                         <b style="color: #B28E1B">Group size:</b> <span>8 - 12</span>
