--- a/resources/views/Tour/buddhism-tour.html.twig
+++ b/resources/views/Tour/buddhism-tour.html.twig
@@ -236,6 +236,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3350 for 2-5 PAX</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
