--- a/resources/views/Tour/jewels-of-mongolia.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia.html.twig
@@ -190,6 +190,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$2895</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         <span style="font-weight: bold; color: brown">$250 OFF by Oct 31</span>
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$490</span>
