--- a/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
+++ b/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
@@ -219,6 +219,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>6985 $ for per person</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>1650 $</span>
