--- a/resources/views/Tour/naadam_festival_journey.html.twig
+++ b/resources/views/Tour/naadam_festival_journey.html.twig
@@ -206,6 +206,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$6450 for per person </span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$1750 </span>
