--- a/resources/views/Tour/ultimate-mongolia.html.twig
+++ b/resources/views/Tour/ultimate-mongolia.html.twig
@@ -273,6 +273,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3885</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         {#<span style="font-weight: bold; color: brown">$500 OFF by March 31</span>
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$740</span>
