--- a/resources/views/Tour/winter-festival-tour.html.twig
+++ b/resources/views/Tour/winter-festival-tour.html.twig
@@ -180,6 +180,10 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$2385</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown"><a
+                                    href="http://www.travelallmongolia.com/contact/form">
+                                Contact us for Early Booking Discount</a></span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$450</span>
                         <br/>
                     </div>
