--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -19,6 +19,8 @@
                         </div>
                     </div>
                 </div>
+
+                <iframe width="430" height="242" src="https://www.youtube.com/embed/t5M0Oq54hpE" frameborder="0" allowfullscreen></iframe>
             </div>
             <!--/ week offer -->
             <!-- special offer -->
@@ -61,6 +63,18 @@
                             <div class="info_row"><span>REGION:</span> Southern Mongolia</div>
                             <div class="info_row"><span>AVAILABLE:</span> May 01-October 1</div>
                             <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}">VIEW DETAILS</a></div>
+                        </div>
+                    </div>
+
+                    <div class="special_item">
+                        <div class="special_image">
+                            <a href="{{ path('tour_show', {'slug' : 'overland-discovery-with-rural-naadam-festival'}) }}"><img src="/images/special_offer_gobi.jpg" alt=""></a>
+                        </div>
+                        <div class="special_text">
+                            <h3><a href="{{ path('tour_show', {'slug' : 'overland-discovery-with-rural-naadam-festival'}) }}">Overland Discovery with Rural Naadam Festival in Karakorum</a></h3>
+                            <div class="info_row"><span>DURATION:</span> 16 days, 15 nights</div>
+                            <div class="info_row"><span>AVAILABLE:</span> July 2-17</div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'overland-discovery-with-rural-naadam-festival'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
 
