--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -68,13 +68,13 @@
 
                     <div class="special_item">
                         <div class="special_image">
-                            <a href="{{ path('tour_show', {'slug' : 'overland-discovery-with-rural-naadam-festival'}) }}"><img src="/images/special_offer_gobi.jpg" alt=""></a>
+                            <a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}"><img src="/images/special_offer_15.jpg" alt=""></a>
                         </div>
                         <div class="special_text">
-                            <h3><a href="{{ path('tour_show', {'slug' : 'overland-discovery-with-rural-naadam-festival'}) }}">Overland Discovery with Rural Naadam Festival in Karakorum</a></h3>
-                            <div class="info_row"><span>DURATION:</span> 16 days, 15 nights</div>
-                            <div class="info_row"><span>AVAILABLE:</span> July 2-17</div>
-                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'overland-discovery-with-rural-naadam-festival'}) }}">VIEW DETAILS</a></div>
+                            <h3><a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}">Overland Discovery</a></h3>
+                            <div class="info_row"><span>DURATION:</span> 15 days, 14 nights</div>
+                            <div class="info_row"><span>AVAILABLE:</span> May 15-29, June 12-26, July 15-29, August 7-21, Sep 4-18</div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
 
