--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -20,7 +20,9 @@
                     </div>
                 </div>
 
+                <div style="margin-top: 10px;">
                 <iframe width="430" height="242" src="https://www.youtube.com/embed/t5M0Oq54hpE" frameborder="0" allowfullscreen></iframe>
+                </div>
             </div>
             <!--/ week offer -->
             <!-- special offer -->
@@ -75,6 +77,18 @@
                             <div class="info_row"><span>DURATION:</span> 15 days, 14 nights</div>
                             <div class="info_row"><span>AVAILABLE:</span> May 15-29, June 12-26, July 15-29, August 7-21, Sep 4-18</div>
                             <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}">VIEW DETAILS</a></div>
+                        </div>
+                    </div>
+
+                    <div class="special_item">
+                        <div class="special_image">
+                            <a href="{{ path('tour_show', {'slug' : 'ultimate-mongolia'}) }}"><img src="/images/special_offer_17.jpg" alt=""></a>
+                        </div>
+                        <div class="special_text">
+                            <h3><a href="{{ path('tour_show', {'slug' : 'ultimate-mongolia'}) }}">Ultimate Mongolia</a></h3>
+                            <div class="info_row"><span>DURATION:</span> 18 days, 17 nights</div>
+                            <div class="info_row"><span>AVAILABLE:</span> June 11-28, June 18 – July 5, July 17 - Aug 3,  Aug 8-25, Aug 15 – Sep 1</div>
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'ultimate-mongolia'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
 
