--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -75,7 +75,7 @@
                         <div class="special_text">
                             <h3><a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}">Overland Discovery</a></h3>
                             <div class="info_row"><span>DURATION:</span> 15 days, 14 nights</div>
-                            <div class="info_row"><span>AVAILABLE:</span> May 15-29, June 12-26, July 15-29, August 7-21, Sep 4-18</div>
+                            <div class="info_row"><span>PRICE:</span> $3145</div>
                             <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                         <div class="special_text">
                             <h3><a href="{{ path('tour_show', {'slug' : 'ultimate-mongolia'}) }}">Ultimate Mongolia</a></h3>
                             <div class="info_row"><span>DURATION:</span> 18 days, 17 nights</div>
-                            <div class="info_row"><span>AVAILABLE:</span> June 11-28, June 18 – July 5, July 17 - Aug 3,  Aug 8-25, Aug 15 – Sep 1</div>
+                            <div class="info_row"><span>PRICE:</span> $3885</div>
                             <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'ultimate-mongolia'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
