--- a/resources/views/Tour/golden-eagle-festival.html.twig
+++ b/resources/views/Tour/golden-eagle-festival.html.twig
@@ -74,7 +74,7 @@
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 30 - Day 1 Arrival in Ulaanbaatar</div>
+                                <div class="box_title">Sep 27 - Day 1 Arrival in Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>Upon arrival at Chinggis Khan International Airport, you are met by tour guide and transferred to the hotel in the city center.</p>
                                         <p>Rest of the day is for rest and to recover jet lag and travel fatigue.</p>
@@ -84,7 +84,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 1 - Day 2 Ulaanbaatar (City tour)</div>
+                                <div class="box_title">Sep 28 - Day 2 Ulaanbaatar (City tour)</div>
                                 <div class="box_content">
                                     <p>We will star city tour the first stop is Sukhbaatar Square, the central square named after the revolutionary hero of 1921 Damdiny Sukhbaatar who declared independence from China. We visit Gandan Monastery the largest and most famous functioning monastery in Mongolia; here we may experience monks in worship and see the impressive Golden Buddha Statue of Migjid Janraisig. Time permitting Natural History Museum which is famous for its authentic dinosaur skeletons and and visit Zaisan memorial hill to view of whole city from there. </p>
                                     <p><strong><em>Overnight in 4* hotel<br />Meals: Dinner, Lunch & Dinner </em></strong></p>
@@ -93,45 +93,132 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 2 – Day 3 Ulaanbaatar to Ulgii</div>
+                                <div class="box_title">Sep 29 – Day 3 Ulaanbaatar to Ulgii</div>
                                 <div class="box_content">
-                                    <p>Transfer to the airport for a morning flight to Ulgii (3.5 hours), capital of Bayan-Ulgii, Mongolia’s westernmost province. Ninety percent of the population here is Kazakh, Mongolia’s largest ethnic minority. The isolation of the Altai Mountains has preserved the language and traditions of the Kazakhs, who live amongst some of the most spectacular scenery in Mongolia. We will visit Kazakh families in their settlement. Their Gers are slightly larger than Mongolian Gers, and are decorated with brightly colored rugs. We will enjoy their hospitality and friendliness and learn more in deep about their culture. You will see their traditional technology to make colorful rug. Evening we are up to a highlight of the day to have "bisparmak" which are real Kazakh dishes prepared for respectful guests! Transfer to a temporary ger camp or local hotel upon arrival.</p>
-                                    <p><strong><em>Overnight in local hotel<br /> Meals: Dinner, Lunch & Dinner</em></strong></p>
+                                    <p>Transfer to the airport for a morning flight to Ulgii (3.5 hours), capital of Bayan-
+
+                                        Ulgii, Mongolia’s westernmost province. Ninety percent of the population here is
+
+                                        Kazakh, Mongolia’s largest ethnic minority. The isolation of the Altai Mountains
+
+                                        has preserved the language and traditions of the Kazakhs, who live amongst some
+
+                                        of the most spectacular scenery in Mongolia. We will visit Kazakh families in their
+
+                                        settlement. Their Gers are slightly larger than Mongolian Gers, and are decorated
+
+                                        with brightly colored rugs. We will enjoy their hospitality and friendliness and
+
+                                        learn more in deep about their culture.</p>
+                                    <p><strong><em>Overnight in local hotel or ger camp<br /> Meals: Dinner, Lunch & Dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 3 – Day 4 Golden Eagle Festival - Opening Ceremony / Competition</div>
+                                <div class="box_title">Sep 30 Day 4 Explore Ulgii Town and Visiting Museum</div>
                                 <div class="box_content">
-                                    <p>The official opening ceremony commences with the participants parading in on horseback with their eagles. The competition begins with each Kazakh displaying his hunting outfit and accessories, the most elaborate and beautiful of which receive the highest points. In the afternoon, the judges will evaluate the Golden Eagles’ speed and agility. The eagles will be released from a cliff with their owners standing below, signaling for the eagles to land upon their arms as they do while hunting. Those with the fastest times and best technique will be awarded the highest scores. In the evening, attend a Kazakh play in honor of the hunters and their eagles.</p>
-                                    <p><strong><em>Overnight in local hotel<br />Meals: Dinner, Lunch & Dinner </em></strong></p>
+                                    <p>Ulgii (or Ölgii) is the capital of the Bayan-Ölgii Aimag (province) located in the
+
+                                        extreme west of the country.  It has an altitude of about 5,600 feet and population
+
+                                        of about 29,000.  It is the largest town in the area.  It is the center of the
+
+                                        predominately Kazakh region of Mongolia.  The isolation of the Altai Mountains
+
+                                        has preserved the language and traditions of the Kazakhs, who live amongst some
+
+                                        of the most spectacular scenery in Mongolia. We will visit Kazakh families in their
+
+                                        settlement. Their Gers are slightly larger than Mongolian Gers, and are decorated
+
+                                        with brightly colored rugs. We will enjoy their hospitality and friendliness and
+
+                                        learn more in deep about their culture. You will see their traditional technology to
+
+                                        make colorful rug.
+
+                                        <br>A visit to the well regarded provincial museum should provide a good overview of
+
+                                        the Muslim culture of Western Mongolia that differs so much from most of
+
+                                        Mongolia.</p>
+                                    <p><strong><em>Overnight in local hotel or ger camp<br />Meals: Dinner, Lunch & Dinner </em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 4 – Day 5 Golden Eagle Festivals & Awards Ceremony</div>
+                                <div class="box_title">Oct 1 – Day 5 Golden Eagle Festival - Opening Ceremony / Competition</div>
                                 <div class="box_content">
-                                    <p>The Golden Eagles will be released from a cliff to attack fox skins that will be dragged by their owner on horseback. The eagles will be judged on their success of grabbing the "fox", their speed, and "gripping" technique. As the points for the competitions are being tallied, the Kazakhs will compete in their traditional game called "kukbar"- passing goat skin which tests one's horse riding skills, strength and agility. In the late afternoon, the winners of the festival will be announced at the awards ceremony. In the evening, enjoy a celebration dinner. </p>
-                                    <p><strong><em>Overnight in local hotel<br /> Meals: Dinner, Lunch & Dinner</em></strong></p>
+                                    <p>The official opening ceremony commences with the participants parading in on
+
+                                        horseback with their eagles. The competition begins with each Kazakh displaying
+
+                                        his hunting outfit and accessories, the most elaborate and beautiful of which
+
+                                        receive the highest points. In the afternoon, the judges will evaluate the Golden
+
+                                        Eagles’ speed and agility. The eagles will be released from a cliff with their owners
+
+                                        standing below, signaling for the eagles to land upon their arms as they do while
+
+                                        hunting. Those with the fastest times and best technique will be awarded the
+
+                                        highest scores. In the evening, attend a Kazakh play in honor of the hunters and
+
+                                        their eagles.</p>
+                                    <p><strong><em>Overnight in local hotel or ger camp<br /> Meals: Dinner, Lunch & Dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 5 - Day 6 Fly back to Ulaanbaatar </div>
+                                <div class="box_title">Oct 2 – Day 6 Golden Eagle Festivals & Awards Ceremony</div>
                                 <div class="box_content">
-                                    <p>After breakfast, we will transfer to airport for return flight to Ulaanbaatar. In the afternoon there is more to see here upon arrival if you are interested, such as a visit to the Bogd Khan Winter Palace Museum, a residence of Bodg Jabzan Damba Hutagt VIII whom was Mongolia's last theocrat. Or take a leisurely stroll through the town center. In the evening perhaps you can enjoy a farewell dinner and attend the local folklore dance shows.</p>
+                                    <p>The Golden Eagles will be released from a cliff to attack fox skins that will be
+
+                                        dragged by their owner on horseback. The eagles will be judged on their success of
+
+                                        grabbing the "fox", their speed, and "gripping" technique. As the points for the
+
+                                        competitions are being tallied, the Kazakhs will compete in their traditional game
+
+                                        called "kukbar"- passing goat skin which tests one's horse riding skills, strength
+
+                                        and agility. In the late afternoon, the winners of the festival will be announced at
+
+                                        the awards ceremony. In the evening, enjoy a celebration dinner.</p>
+                                    <p><strong><em>Overnight in local hotel or ger camp<br /> Meals: Dinner, Lunch & Dinner</em></strong></p>
+                                    <div class="clear"></div>
+                                </div>
+                            </div>
+
+                            <div class="sb sb_brown">
+                                <div class="box_title">Oct 3 - Day 7 Fly back to Ulaanbaatar</div>
+                                <div class="box_content">
+                                    <p>After breakfast, we will transfer to airport for return flight to Ulaanbaatar. In the
+
+                                        afternoon there is more to see here upon arrival if you are interested, such as a visit
+
+                                        to the Bogd Khan Winter Palace Museum, a residence of Bodg Jabzan Damba
+
+                                        Hutagt VIII whom was Mongolia's last theocrat. Or take a leisurely stroll through
+
+                                        the town center. In the evening perhaps you can enjoy a farewell dinner and attend
+
+                                        the local folklore dance shows.</p>
                                     <p><strong><em>Overnight in 4* hotel<br /> Meals: Dinner, Lunch & Dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 6 – Day 7 Departure</div>
+                                <div class="box_title">Oct 4 – Day 8 Departure</div>
                                 <div class="box_content">
-                                    <p>Check out from hotel and transfer to Chinggis Khaan International airport or Ulaanbatar train station for departure.</p>
+                                    <p>Check out from hotel and transfer to Chinggis Khaan International airport or
+
+                                        Ulaanbaatar train station for departure.</p>
                                     <p><strong><em><br /> </em></strong></p>
                                     <div class="clear"></div>
                                 </div>
@@ -181,12 +268,10 @@
                     </div>
                     <!--/ widget_categories -->
 
-                    {#
                     <div class="widget-container widget_categories">
                         <h3 class="widget-title">Travel map</h3>
                         <a href="{{ tour.mapLarge }}" data-rel="prettyPhoto" title="Travel map" hidefocus="true" rel="prettyPhoto" style="outline: none;"><img src="{{ tour.map }}" width="380" class="frame_box"/></a>
                     </div>
-                    #}
 
                     <!-- widget_recent_comments -->
                     <div class="widget-container widget_popular">
