order catalog banner

--- a/resources/views/Tour/winter-festival-tour.html.twig
+++ b/resources/views/Tour/winter-festival-tour.html.twig
@@ -315,6 +315,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
