--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -374,6 +374,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
