--- a/resources/views/Tour/a_classic_journey_of_mongolia.html.twig
+++ b/resources/views/Tour/a_classic_journey_of_mongolia.html.twig
@@ -336,6 +336,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
