--- a/resources/views/Tour/bird_watching_trip.html.twig
+++ b/resources/views/Tour/bird_watching_trip.html.twig
@@ -123,6 +123,9 @@
                             <a href="{{ path('page_show', {'slug':'trip-calendar-2016'}) }}"><img src="/images/group_travel_2014.jpg" alt="Join our group travel 2014"/></a>
                         </div>
                     </div>
+
+                    {{ include('Tour/_catalog.html.twig') }}
+
                 </div>
             </div>
         </div>
