--- a/resources/views/Tour/buddhism-tour.html.twig
+++ b/resources/views/Tour/buddhism-tour.html.twig
@@ -374,6 +374,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
