--- a/resources/views/Tour/gobi_and_beyond.html.twig
+++ b/resources/views/Tour/gobi_and_beyond.html.twig
@@ -298,6 +298,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
