--- a/resources/views/Tour/highlights_of_mongolia.html.twig
+++ b/resources/views/Tour/highlights_of_mongolia.html.twig
@@ -344,6 +344,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
