--- a/resources/views/Tour/horse-riding-in-central-part-of-mongolia.html.twig
+++ b/resources/views/Tour/horse-riding-in-central-part-of-mongolia.html.twig
@@ -316,6 +316,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
