--- a/resources/views/Tour/horse-trip-around-khuvsgul-lake.html.twig
+++ b/resources/views/Tour/horse-trip-around-khuvsgul-lake.html.twig
@@ -303,6 +303,8 @@
             </div>
         </div>
 
+        {{ include('Tour/_catalog.html.twig') }}
+
     </div>
     </div>
 {% endblock %}
