--- a/resources/views/Tour/jewels-of-mongolia-with-rural-naadam-festival.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia-with-rural-naadam-festival.html.twig
@@ -498,6 +498,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
