--- a/resources/views/Tour/jewels-of-mongolia.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia.html.twig
@@ -327,6 +327,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
