--- a/resources/views/Tour/karakorum_khuvsgul.html.twig
+++ b/resources/views/Tour/karakorum_khuvsgul.html.twig
@@ -308,6 +308,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
