--- a/resources/views/Tour/khuvsgul_lake_tour.html.twig
+++ b/resources/views/Tour/khuvsgul_lake_tour.html.twig
@@ -299,6 +299,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
