--- a/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
+++ b/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
@@ -353,6 +353,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
