--- a/resources/views/Tour/naadam_festival_journey.html.twig
+++ b/resources/views/Tour/naadam_festival_journey.html.twig
@@ -338,6 +338,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
