--- a/resources/views/Tour/overland-discovery-with-rural-naadam-festival.html.twig
+++ b/resources/views/Tour/overland-discovery-with-rural-naadam-festival.html.twig
@@ -391,6 +391,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
