--- a/resources/views/Tour/overland-discovery.html.twig
+++ b/resources/views/Tour/overland-discovery.html.twig
@@ -382,6 +382,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
