--- a/resources/views/Tour/splendors_of_mongolia.html.twig
+++ b/resources/views/Tour/splendors_of_mongolia.html.twig
@@ -323,6 +323,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
