--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -335,6 +335,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
