--- a/resources/views/Tour/ultimate-mongolia.html.twig
+++ b/resources/views/Tour/ultimate-mongolia.html.twig
@@ -408,6 +408,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
