--- a/resources/views/Tour/unparalleled-luxury-tour.html.twig
+++ b/resources/views/Tour/unparalleled-luxury-tour.html.twig
@@ -343,6 +343,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
