--- a/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
+++ b/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
@@ -536,6 +536,8 @@
                     </div>
                 </div>
 
+                {{ include('Tour/_catalog.html.twig') }}
+
             </div>
             <!--/ sidebar -->
         </div>
