special offer: Jewels of Mongolia with Rural Naadam Festival in Khuvsgul lake

--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -13,7 +13,7 @@
                     <div class="offer_image"><a href="{{ path('tour_show', {'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake'}) }}"><img src="/images/special_offer.jpg" alt="Jewels of Mongolia with Rural Naadam Festival in Khuvsgul lake"></a></div>
                     <div class="offer_text">
                         <h3><a href="{{ path('tour_show', {'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake'}) }}">Jewels of Mongolia with Rural Naadam Festival in Khuvsgul lake</a></h3>
-                        <div class="offer_price">12 days / 11 nights</div>
+                        <div class="offer_price" style="top: 46px;">12 days / 11 nights</div>
                         <div class="offer_descr">
                             We invites you to join us this coming summer for an experience of a lifetime in the awesome landscapes of Mongolia, from mountains, to lakes, to hot dry desert, to rolling hills of open grassland...
                         </div>
