--- a/resources/views/Content/faq.html
+++ b/resources/views/Content/faq.html
@@ -47,8 +47,9 @@
     <p>On Domestic flights, passengers are allowed 20kg of luggage per person. On International flights, passengers are allowed two pieces of checked luggage. Excess luggage fees will be charged if you check more than the stated allowances, and these charges are your responsibility.&nbsp; At most major airports, baggage carts are available for your luggage, usually for a small additional fee.</p>
     <p><strong>Tourist ger camp</strong></p>
     <p>Tourist GER camps are the best accommodation closely located to attraction sites through the country, where visitors can experience and feel nomadic way of life. It is a portable round felt house perfectly suited to the Mongolian nomadic lifestyle. The GER consists of a wooden frame carrying a felt cover. Traditionally furnished with beautifully painted wood-framed beds and furniture, the lodge is built in a traditional architectural style.</p>
-    <p><img src="http://sphotos-c.ak.fbcdn.net/hphotos-ak-ash4/229989_425022897556663_180227311_n.jpg" alt="" width="200" />&nbsp;<img src="http://sphotos-d.ak.fbcdn.net/hphotos-ak-snc6/229989_425022904223329_1081983011_n.jpg" alt="" width="200" />&nbsp;<img src="http://sphotos-f.ak.fbcdn.net/hphotos-ak-snc6/229989_425022907556662_1291164234_n.jpg" alt="" width="200" /></p>
-    <p><img src="http://sphotos-a.ak.fbcdn.net/hphotos-ak-ash4/229989_425022910889995_1559719975_n.jpg" alt="" width="200" />&nbsp;<img src="http://sphotos-g.ak.fbcdn.net/hphotos-ak-snc6/229989_425022914223328_1960380003_n.jpg" alt="" width="200" />&nbsp;<img src="http://sphotos-e.ak.fbcdn.net/hphotos-ak-snc7/488012_425023004223319_1801809366_n.jpg" alt="" width="200" /></p>
+    <p><img src="/images/ger1.jpg" alt="" width="200" />&nbsp;<img src="/images/ger2.jpg" alt="" width="200" />&nbsp;<img src="/images/ger3.jpg" alt="" width="200" /></p>
+    <p><img src="/images/ger4.jpg" alt="" width="200" />&nbsp;<img src="/images/ger5.jpg" alt="" width="200" />&nbsp;<img src="/images/ger6.jpg" alt="" width="200" /></p>
+    <p><img src="/images/ger7.jpg" alt="" width="200" />&nbsp;<img src="/images/ger8.jpg" alt="" width="200" />&nbsp;<img src="/images/ger9.jpg" alt="" width="200" /></p>
     <p><strong>Clothes and equipments</strong></p>
     <ul>
         <li>Shoes suitable walking and riding with thick socks</li>
@@ -77,4 +78,4 @@
         <li>Pills for anti-diarrhea, constipation, stomach upset, headache and other like sunburn, skin irritation.</li>
     </ul>
 </div>
-<style type="text/css">.faq p {font-size: 16px !important; color: #0F0E02}</style>
+<style type="text/css">.faq p {font-size: 16px !important; color: #0F0E02;margin-top: 10px; margin-bottom: 10px;}</style>
