send tour name in quick contact

--- a/resources/views/Tour/gobi_desert_tour.html.twig
+++ b/resources/views/Tour/gobi_desert_tour.html.twig
@@ -150,6 +150,7 @@
                                 <form method="post" action="{{ path('inquiry_send', {'slug':slug}) }}" class="loginform" novalidate>
                                     <h2>Quick inquiry</h2>
 
+                                    <input type="hidden" name="tourName" value="{{ tour.name }}">
                                     {% for message in app.session.getFlashBag.get('inquiry') %}
                                         <mark style="padding: 10px;display: block;"> {{ message }}</mark>
                                     {% endfor %}
