--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -94,7 +94,7 @@
                     </ul>
                 </li>
                 <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'tourist-events'}) }}"><span>Tourist events</span></a></li>
-                <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'tourist-attractions'}) }}"><span>Tourist attractions</span></a></li>
+                <li class="menu-level-0"><a href="{{ path('catalog') }}"><span>Request a brochure</span></a></li>
                 <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'about-us'}) }}"><span>About us</span></a>
                     <ul class="submenu-1">
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'why-travel-with-us'}) }}"><span>Why Travel With Us</span></a></li>
