--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -40,7 +40,8 @@
         <!-- main JS libs  -->
         <script src="/js/libs/modernizr.min.js"></script>
         <script src="/js/libs/respond.min.js"></script>
-        <script src="/js/libs/jquery.min.js"></script>
+        {#<script src="/js/libs/jquery.min.js"></script>#}
+        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
         <script src="/js/protects.js"></script>
         <script type="text/javascript">
             $(function() {
