--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -383,7 +383,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <a href="http://www.nomadicvoyages.com">
+                        <a href="http://www.nomadicvoyages.com/tour/highlights-of-mongolia-with-rural-naadam-in-khuvsgul-lake">
                             <img src="http://placehold.it/960x640" alt="">
                         </a>
                     </div>
