--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -384,7 +384,7 @@
                 <div class="modal-content">
                     <div class="modal-body">
                         <a href="http://www.nomadicvoyages.com/tour/highlights-of-mongolia-with-rural-naadam-in-khuvsgul-lake">
-                            <img src="http://placehold.it/768x512" alt="">
+                            <img src="/tourimg/highlights-of-mongolia-with-rural-naadam-festival.jpg" alt="highlights-of-mongolia-with-rural-naadam-festival" title="Highlights of Mongolia with Rural Naadam Festival 12 days">
                         </a>
                     </div>
                 </div>
