--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -188,7 +188,7 @@
             </div>
 
             <div class="footer_contacts">
-                {#<span class="phone">Call us: 863-273-3527</span>#}
+                <span class="phone">Call us: 720-646-4990</span>
                 <span class="email">Email: info@travelallmongolia.com</span>
             </div>
 
