title organization removed from catalog form

--- a/resources/views/Page/request_catalog.html.twig
+++ b/resources/views/Page/request_catalog.html.twig
@@ -41,11 +41,11 @@
                             {{ form_widget(form.first_name, { 'attr': {'class': 'inputField required'} }) }}
                             {{ form_errors(form.first_name) }}
                         </div>
-                        <div class="row alignleft field_text">
+                        {#<div class="row alignleft field_text">
                             {{ form_label(form.title) }}
                             {{ form_widget(form.title, { 'attr': {'class': 'inputField required'} }) }}
                             {{ form_errors(form.title) }}
-                        </div>
+                        </div>#}
                         <div class="row alignleft field_text">
                             {{ form_label(form.country) }}
                             {{ form_widget(form.country, { 'attr': {'class': 'inputField required'} }) }}
@@ -74,11 +74,11 @@
                             {{ form_widget(form.last_name, { 'attr': {'class': 'inputField required'} }) }}
                             {{ form_errors(form.last_name) }}
                         </div>
-                        <div class="row alignleft field_text">
+                        {#<div class="row alignleft field_text">
                             {{ form_label(form.organization) }}
                             {{ form_widget(form.organization, { 'attr': {'class': 'inputField required'} }) }}
                             {{ form_errors(form.organization) }}
-                        </div>
+                        </div>#}
                         <div class="row alignleft field_text">
                             {{ form_label(form.zip_code) }}
                             {{ form_widget(form.zip_code, { 'attr': {'class': 'inputField required'} }) }}
