--- a/resources/views/Tour/_catalog.html.twig
+++ b/resources/views/Tour/_catalog.html.twig
@@ -1,8 +1,8 @@
 
 <!-- subscribe buttons -->
-<div class="widget-container subscribe_btn">
+<div class="subscribe_btn">
     <div>
-        <a href="/request-a-catalog/form"><img src="/images/order_catalog.jpg" alt="Order Free Catalog and Mongolian Travel Book"/></a>
+        <a href="/request-a-catalog/form"><img src="/images/order-catalog.jpg" alt="Order Free Catalog and Mongolian Travel Book"/></a>
     </div>
 </div>
 <!--/ subscribe buttons -->
