--- a/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
@@ -376,7 +376,7 @@
                     </div>
                 </div>
 
-                {{ include('Tour/_catalog.html.twig') }}
+                {{ include('Tour/_catalog_urt.html.twig') }}
 
             </div>
             <!--/ sidebar -->
