--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -375,7 +375,7 @@
                     </div>
                 </div>
 
-                {{ include('Tour/_catalog.html.twig') }}
+                {{ include('Tour/_catalog_urt.html.twig') }}
 
             </div>
             <!--/ sidebar -->
