--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -359,7 +359,7 @@
                     </div>
                 </div>
 
-                {{ include('Tour/_catalog.html.twig') }}
+                {{ include('Tour/_catalog_urt.html.twig') }}
 
             </div>
             <!--/ sidebar -->
