airfare num_people

--- a/resources/views/Page/_request_airfare_quote.html.twig
+++ b/resources/views/Page/_request_airfare_quote.html.twig
@@ -6,4 +6,5 @@ Email: {{ form.email }}
 Tour: {{ form.tour }}
 Arrival date: {{ form.arrival_date }}
 Departure date: {{ form.departure_date }}
+Number of people: {{ form.num_people }}
 Comment: {{ form.comment }}
