request catalog banner

--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -202,6 +202,10 @@
     </div>
 </div><!--end wrapper-->
 
+
+<a href="{{ path('catalog') }}">
+<img src="/images/request_free_catalog.jpg" alt="Request free catalog" style="position: fixed; right: 0; top: 25%; cursor: pointer; z-index: 999; width: 40px;">
+</a>
 <!-- Google Code for Remarketing Tag -->
 <!--------------------------------------------------
 Remarketing tags may not be associated with personally identifiable 
