motor bike to motor cycle typo

--- a/resources/views/Tour/motor-cycle-tour.html.twig
+++ b/resources/views/Tour/motor-cycle-tour.html.twig
@@ -77,7 +77,7 @@
                             <div class="sb sb_brown">
                                 <div class="box_title">Day 1 Ulaanbaatar (City tour)</div>
                                 <div class="box_content">
-                                    <p>Arrive at Ulaanbaatar. Meet your Guide at the airport and transfer to the hotel. Afternoon meet crew and allocate motorbikes. You will prepare something for motorbike trip. We will star city tour the first stop is Sukhbaatar Square, the central square named after the revolutionary hero of 1921 Damdiny Sukhbaatar who declared independence from China. We visit Gandan Monastery the largest and most famous functioning monastery in Mongolia; here we may experience monks in worship and see the impressive Golden Buddha Statue of Migjid Janraisig. Time permitting Natural History Museum which is famous for its authentic dinosaur skeletons and and visit Zaisan memorial hill to view of whole city from there. Welcome dinner at restaurant and stay overnight in hotel. (B, L, D)</p>
+                                    <p>Arrive at Ulaanbaatar. Meet your Guide at the airport and transfer to the hotel. Afternoon meet crew and allocate motorcycles. You will prepare something for motorcycle trip. We will star city tour the first stop is Sukhbaatar Square, the central square named after the revolutionary hero of 1921 Damdiny Sukhbaatar who declared independence from China. We visit Gandan Monastery the largest and most famous functioning monastery in Mongolia; here we may experience monks in worship and see the impressive Golden Buddha Statue of Migjid Janraisig. Time permitting Natural History Museum which is famous for its authentic dinosaur skeletons and and visit Zaisan memorial hill to view of whole city from there. Welcome dinner at restaurant and stay overnight in hotel. (B, L, D)</p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
 
                             <div class="sb sb_brown">
                                 <div class="box_content">
-                                    <p><strong>Motor bikes are Yamaha 250 and 450, BMW and KTM.</strong></p>
+                                    <p><strong>Motor cycles are Yamaha 250 and 450, BMW and KTM.</strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
