If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you

--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -261,7 +261,7 @@
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$600</span>
                         <br/>
-                        We have a single man willing to share a room with another single man
+                        If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
                     </div>
                     <!--/ widget_categories -->
 
