--- a/resources/views/Tour/gobi_desert_tour.html.twig
+++ b/resources/views/Tour/gobi_desert_tour.html.twig
@@ -202,6 +202,7 @@
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$450</span>
                         <br/>
+                        If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
                     </div>
                     <!--/ widget_categories -->
 
