--- a/resources/views/Tour/jewels-of-mongolia-with-rural-naadam-festival.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia-with-rural-naadam-festival.html.twig
@@ -369,6 +369,7 @@
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$500</span>
                         <br/>
+                        If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
                     </div>
                     <!--/ widget_categories -->
 
