--- a/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
+++ b/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
@@ -227,6 +227,7 @@
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>1650 $</span>
                         <br/>
+                        If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
                     </div>
                     <!--/ widget_categories -->
 
