--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -227,7 +227,7 @@
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
                         <br/>
-                        <span>We have a single man willing to share a room with another single man</span>
+                        <span>If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you</span>
                         <br/>
                     </div>
                     <!--/ widget_categories -->
