--- a/resources/views/Tour/unparalleled-luxury-tour.html.twig
+++ b/resources/views/Tour/unparalleled-luxury-tour.html.twig
@@ -217,6 +217,7 @@
                         <br/>
                         <b style="color: #B28E1B">Group size:</b> <span>8 - 12</span>
                         <br/>
+                        If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
                     </div>
                     <!--/ widget_categories -->
 
