us phone remove

--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -5,7 +5,7 @@
 
         <div class="abs-info">
             <span>E-mail us: <a href="mailto:info@travelallmongolia.com">info@travelallmongolia.com</a></span>
-            <span>|&nbsp;&nbsp;&nbsp;Call us: <a href="tel:7206464990">720-646-4990</a></span>
+            {#<span>|&nbsp;&nbsp;&nbsp;Call us: <a href="tel:7206464990">720-646-4990</a></span>#}
             {#<script type="text/javascript" src="http://download.skype.com/share/skypebuttons/js/skypeCheck.js"></script>
             <span>|&nbsp;&nbsp;&nbsp;Skype: <a href="skype:Soyoloo_Mongolianluxurytours?chat"><img src="http://mystatus.skype.com/smallclassic/Soyoloo_Mongolianluxurytours" style="border: none;" width="114" height="20" alt="My status"></a></span>#}
         </div>
