--- a/resources/views/Tour/jewels-of-mongolia.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia.html.twig
@@ -194,8 +194,8 @@
                                     href="http://www.travelallmongolia.com/contact/form">
                                 Contact us for Early Booking Discount</a></span>
                         <br/>#}
-                        {#<span style="font-weight: bold; color: brown">$250 OFF by Oct 31</span>
-                        <br/>#}
+                        <span style="font-weight: bold; color: brown">$500 OFF </span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$490</span>
                         <br/>
                         If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
@@ -254,8 +254,8 @@
 
                     <!-- subscribe buttons -->
                     <div class="widget-container subscribe_btn">
-                        <mark style="padding: 10px;display: block;">$500 OFF </mark>
-                        <br/>
+                        {#<mark style="padding: 10px;display: block;">OFFER 10% May sale discount</mark>
+                        <br/>#}
                         <div>
                             <a href="{{ path('page_show', {'slug':'trip-calendar-2016'}) }}"><img src="/images/group_travel_2014.jpg" alt="Join our group travel 2014"/></a>
                         </div>
