--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -45,7 +45,7 @@
         <script src="/js/protects.js"></script>
         <script type="text/javascript">
             $(function() {
-                $('body').contentprotector({protect: false}); // turn off content protection by set false
+//                $('body').contentprotector({protect: false}); // turn off content protection by set false
             });
         </script>
 
