--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -33,6 +33,9 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
     </script>
+
+        <meta name="google-site-verification" content="Dg-4dn5kDOqXidrF0L4DjNdAjKrSN_MpyK4pj00cESY" />
+        <meta name="msvalidate.01" content="C8E5C468DFC6AB2DB058E47701AADE0B" />
     {% endif %}
 
     {# JavaScripts #}
