--- a/resources/views/Page/catalog_success.html.twig
+++ b/resources/views/Page/catalog_success.html.twig
@@ -52,25 +52,5 @@
 
         </div>
     </div><!--end conatiner-->
-    {#<!-- Google Code for Lead Conversion Page --> <script type="text/javascript"> /* <![CDATA[ */ var google_conversion_id = 973048679; var google_conversion_language = "en"; var google_conversion_format = "2"; var google_conversion_color = "ffffff"; var google_conversion_label = "E3l9CIGDgAgQ55b-zwM"; var google_remarketing_only = false; /* ]]> */ </script> <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"> </script> <noscript> <div style="display:inline;"> <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/973048679/?label=E3l9CIGDgAgQ55b-zwM&amp;guid=ON&amp;script=0"/> </div> </noscript>#}
-    <!-- Google Code for Leads Conversion Page -->
-    <script type="text/javascript">
-        / <![CDATA[ /
-        var google_conversion_id = 921795948;
-        var google_conversion_language = "en";
-        var google_conversion_format = "3";
-        var google_conversion_color = "ffffff";
-        var google_conversion_label = "E0POCNrs32UQ7PrFtwM";
-        var google_remarketing_only = false;
-        / ]]> /
-    </script>
-    <script type="text/javascript"
-            src="//www.googleadservices.com/pagead/conversion.js">
-    </script>
-    <noscript>
-        <div style="display:inline;">
-            <img height="1" width="1" style="border-style:none;" alt=""
-                 src="//www.googleadservices.com/pagead/conversion/921795948/?label=E0POCNrs32UQ7PrFtwM&amp;guid=ON&amp;script=0"/>
-        </div>
-    </noscript>
+    <!-- Google Code for Lead Conversion Page --> <script type="text/javascript"> /* <![CDATA[ */ var google_conversion_id = 973048679; var google_conversion_language = "en"; var google_conversion_format = "2"; var google_conversion_color = "ffffff"; var google_conversion_label = "E3l9CIGDgAgQ55b-zwM"; var google_remarketing_only = false; /* ]]> */ </script> <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"> </script> <noscript> <div style="display:inline;"> <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/973048679/?label=E3l9CIGDgAgQ55b-zwM&amp;guid=ON&amp;script=0"/> </div> </noscript>
 {% endblock %}
