nomadic voyags iin 2 banner garch irdegiig gants jeep safari geseng uldeeh

--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -383,15 +383,15 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        {% if random('AB') == 'A' %}
+                        {#{% if random('AB') == 'A' %}
                         <a href="http://www.nomadicvoyages.com/tour/highlights-of-mongolia-with-rural-naadam-in-khuvsgul-lake">
                             <img src="/tourimg/highlights-of-mongolia-with-rural-naadam-festival.jpg" alt="highlights-of-mongolia-with-rural-naadam-festival" title="Highlights of Mongolia with Rural Naadam Festival 12 days">
                         </a>
-                        {% else %}
+                        {% else %}#}
                             <a href="http://www.nomadicvoyages.com/tour/jeep-safari-with-rural-naadam-festival-in-karakorum">
                                 <img src="/tourimg/jeep-safari-with-rural-naadam-festival.jpg" alt="jeep-safari-with-rural-naadam-festival-in-karakorum" title="Jeep Safari with Rural Naadam Festival in Karakorum 15 days">
                             </a>
-                        {% endif %}
+                        {#{% endif %}#}
                     </div>
                 </div>
             </div>
